--- a/style.css
+++ b/style.css
@@ -1813,42 +1813,56 @@ em {
 }
 /* line 960, src/style.scss */
 .single-content > blockquote {
+  margin-bottom: 28px;
+}
+/* line 963, src/style.scss */
+.single-content > blockquote p {
   color: #9f916f;
   font: 400 33px/136% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
-  margin-bottom: 28px;
   font-style: italic;
   border-left: 3px solid;
   border-color: #9f916f;
   padding-left: 20px;
 }
-/* line 970, src/style.scss */
+/* line 973, src/style.scss */
+.single-content > ul {
+  padding-left: 18px;
+  margin-bottom: 28px;
+  list-style-type: disc;
+}
+/* line 978, src/style.scss */
+.single-content > ul li {
+  color: #000;
+  font: 400 18px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+}
+/* line 985, src/style.scss */
+.single-content > ol {
+  padding-left: 18px;
+  margin-bottom: 28px;
+}
+/* line 989, src/style.scss */
+.single-content > ol li {
+  color: #000;
+  font: 400 18px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
+}
+/* line 995, src/style.scss */
 .single-content .bulleted-list, .single-content .numbered-list {
   padding-left: 18px;
   margin-bottom: 28px;
 }
-/* line 975, src/style.scss */
+/* line 1000, src/style.scss */
 .single-content .bulleted-list {
   list-style-type: disc;
 }
-/* line 979, src/style.scss */
+/* line 1004, src/style.scss */
 .single-content .numbered-list {
   list-style-type: decimal;
-}
-/* line 984, src/style.scss */
-.single-content ul > li {
-  color: #9f916f;
-  font: 400 16px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
-}
-/* line 989, src/style.scss */
-.single-content ul > li span {
-  color: #000;
-  font: 400 18px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
 
 /* ============================================= */
 /*	History-Page   						   		 */
 /* ============================================= */
-/* line 1002, src/style.scss */
+/* line 1017, src/style.scss */
 .history-list-mod {
   margin: 0 auto;
   text-align: center;
@@ -1856,20 +1870,20 @@ em {
   padding: 0px 10px;
 }
 @media (min-width: 401px) {
-  /* line 1002, src/style.scss */
+  /* line 1017, src/style.scss */
   .history-list-mod {
     margin-top: -50px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1002, src/style.scss */
+  /* line 1017, src/style.scss */
   .history-list-mod {
     padding: 0px;
     margin-bottom: 100px;
   }
 }
 
-/* line 1018, src/style.scss */
+/* line 1033, src/style.scss */
 .history-year {
   margin: 0 auto 50px auto;
   border: 1px solid;
@@ -1891,7 +1905,7 @@ em {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1036, src/style.scss */
+/* line 1051, src/style.scss */
 .history-year:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1902,25 +1916,25 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 900px) {
-  /* line 1018, src/style.scss */
+  /* line 1033, src/style.scss */
   .history-year {
     max-height: 270px;
     max-width: 850px;
   }
 }
 
-/* line 1047, src/style.scss */
+/* line 1062, src/style.scss */
 a.history-link-mod {
   display: block;
 }
 
-/* line 1051, src/style.scss */
+/* line 1066, src/style.scss */
 .year-tz-img {
   width: 100%;
   margin-top: -1px;
 }
 @media (min-width: 900px) {
-  /* line 1051, src/style.scss */
+  /* line 1066, src/style.scss */
   .year-tz-img {
     float: left;
     max-width: 380px;
@@ -1928,30 +1942,30 @@ a.history-link-mod {
   }
 }
 
-/* line 1062, src/style.scss */
+/* line 1077, src/style.scss */
 .year-tz-txt-mod {
   padding: 25px 25px 30px 25px;
   text-align: left;
 }
 @media (min-width: 900px) {
-  /* line 1062, src/style.scss */
+  /* line 1077, src/style.scss */
   .year-tz-txt-mod {
     padding: 27px 20px 30px 420px;
   }
 }
-/* line 1070, src/style.scss */
+/* line 1085, src/style.scss */
 .year-tz-txt-mod .tz-h1 {
   color: #9f916f;
   margin-bottom: 15px;
 }
-/* line 1074, src/style.scss */
+/* line 1089, src/style.scss */
 .year-tz-txt-mod .tz-h1 a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1077, src/style.scss */
+/* line 1092, src/style.scss */
 .year-tz-txt-mod .tz-h1 a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1961,7 +1975,7 @@ a.history-link-mod {
 }
 
 /***  History-Post  ***/
-/* line 1088, src/style.scss */
+/* line 1103, src/style.scss */
 .history-aside {
   margin: 0 auto;
   position: static;
@@ -1971,14 +1985,14 @@ a.history-link-mod {
   width: 100%;
   padding: 0px 10px 80px 10px;
 }
-/* line 1097, src/style.scss */
+/* line 1112, src/style.scss */
 .history-aside a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1100, src/style.scss */
+/* line 1115, src/style.scss */
 .history-aside a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1987,13 +2001,13 @@ a.history-link-mod {
   color: #9f916f;
 }
 @media (min-width: 500px) {
-  /* line 1088, src/style.scss */
+  /* line 1103, src/style.scss */
   .history-aside {
     padding: 0px 80px 80px 80px;
   }
 }
 @media (min-width: 1150px) {
-  /* line 1088, src/style.scss */
+  /* line 1103, src/style.scss */
   .history-aside {
     top: 1100px;
     left: 4%;
@@ -2003,46 +2017,46 @@ a.history-link-mod {
   }
 }
 @media (min-width: 1300px) {
-  /* line 1088, src/style.scss */
+  /* line 1103, src/style.scss */
   .history-aside {
     left: 10%;
   }
 }
 
-/* line 1123, src/style.scss */
+/* line 1138, src/style.scss */
 .caption-section-h {
   font: 800 23px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #444;
   margin: 40px 0px 15px 0px;
 }
 
-/* line 1129, src/style.scss */
+/* line 1144, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 1134, src/style.scss */
+/* line 1149, src/style.scss */
 .history-aside-ul {
   margin-bottom: 25px;
 }
 
-/* line 1138, src/style.scss */
+/* line 1153, src/style.scss */
 .history-aside-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 1142, src/style.scss */
+/* line 1157, src/style.scss */
 .history-aside-item:last-child {
   margin-bottom: 22px;
 }
 
-/* line 1147, src/style.scss */
+/* line 1162, src/style.scss */
 .history-post-img {
   margin-bottom: 25px;
 }
 
-/* line 1152, src/style.scss */
+/* line 1167, src/style.scss */
 .history-aside .caption-section-h {
   border-top: 1px solid;
   border-color: #eee;
@@ -2052,7 +2066,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 1165, src/style.scss */
+/* line 1180, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -2060,7 +2074,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 1172, src/style.scss */
+/* line 1187, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -2076,19 +2090,19 @@ a.history-link-mod {
   text-align: center;
 }
 @media (min-width: 550px) {
-  /* line 1172, src/style.scss */
+  /* line 1187, src/style.scss */
   .raffle-list-mod {
     padding: 50px 100px 60px 90px;
   }
 }
 
-/* line 1189, src/style.scss */
+/* line 1204, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 
-/* line 1194, src/style.scss */
+/* line 1209, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -2105,13 +2119,13 @@ a.history-link-mod {
   position: absolute;
 }
 
-/* line 1205, src/style.scss */
+/* line 1220, src/style.scss */
 .raffle-content p {
   font: 17px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 @media (min-width: 700px) {
-  /* line 1205, src/style.scss */
+  /* line 1220, src/style.scss */
   .raffle-content p {
     font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   }
@@ -2120,32 +2134,32 @@ a.history-link-mod {
 /* ============================================= */
 /*	Store	    						   		 */
 /* ============================================= */
-/* line 1225, src/style.scss */
+/* line 1240, src/style.scss */
 .closed-store {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
 }
 
-/* line 1229, src/style.scss */
+/* line 1244, src/style.scss */
 .closed-sign-mod {
   max-width: 620px;
   width: 100%;
   margin: 0 auto;
   padding-top: 0px;
 }
-/* line 1235, src/style.scss */
+/* line 1250, src/style.scss */
 .closed-sign-mod img {
   max-width: 600px;
   width: 100%;
 }
 @media (min-width: 700px) {
-  /* line 1229, src/style.scss */
+  /* line 1244, src/style.scss */
   .closed-sign-mod {
     padding-top: 90px;
     padding-bottom: 50px;
   }
 }
 
-/* line 1246, src/style.scss */
+/* line 1261, src/style.scss */
 .store-closed {
   text-align: center;
   font: 800 20px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -2155,7 +2169,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 1259, src/style.scss */
+/* line 1274, src/style.scss */
 .bfc-404 {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/bfc-404.jpg) no-repeat center center;
@@ -2167,7 +2181,7 @@ a.history-link-mod {
   position: relative;
 }
 
-/* line 1270, src/style.scss */
+/* line 1285, src/style.scss */
 .txt-mod-404 {
   text-align: left;
   background-color: #000;
@@ -2183,7 +2197,7 @@ a.history-link-mod {
   max-width: 500px;
 }
 
-/* line 1281, src/style.scss */
+/* line 1296, src/style.scss */
 .h1-404 {
   font: 800 48px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #fff;
@@ -2192,7 +2206,7 @@ a.history-link-mod {
   letter-spacing: 1px;
 }
 
-/* line 1289, src/style.scss */
+/* line 1304, src/style.scss */
 .txt-404 {
   font: 22px/148% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   color: #ddd;
@@ -2201,19 +2215,19 @@ a.history-link-mod {
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 1303, src/style.scss */
+/* line 1318, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
 }
 
-/* line 1308, src/style.scss */
+/* line 1323, src/style.scss */
 .ftr-mod {
   margin: 0 auto;
   max-width: 1200px;
 }
 @media (min-width: 1000px) {
-  /* line 1308, src/style.scss */
+  /* line 1323, src/style.scss */
   .ftr-mod {
     *zoom: 1;
   }
@@ -2240,31 +2254,31 @@ footer {
   }
 }
 
-/* line 1318, src/style.scss */
+/* line 1333, src/style.scss */
 .ftr-logo-mod {
   margin-bottom: 50px;
 }
 
-/* line 1322, src/style.scss */
+/* line 1337, src/style.scss */
 .ftr-logo {
   max-width: 300px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 1328, src/style.scss */
+/* line 1343, src/style.scss */
 .contact-li-item {
   color: #fff;
   font: 800 16px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
-/* line 1332, src/style.scss */
+/* line 1347, src/style.scss */
 .contact-li-item a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1335, src/style.scss */
+/* line 1350, src/style.scss */
 .contact-li-item a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2273,13 +2287,13 @@ footer {
   color: #555;
 }
 
-/* line 1342, src/style.scss */
+/* line 1357, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 1347, src/style.scss */
+/* line 1362, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -2306,7 +2320,7 @@ footer {
   margin-right: 0;
 }
 @media (min-width: 700px) {
-  /* line 1347, src/style.scss */
+  /* line 1362, src/style.scss */
   .sponsors .sponsors-mod {
     *zoom: 1;
   }
@@ -2332,13 +2346,13 @@ footer {
     margin-right: 0;
   }
 }
-/* line 1356, src/style.scss */
+/* line 1371, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 1362, src/style.scss */
+/* line 1377, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
@@ -2347,14 +2361,14 @@ footer {
   columns: 1;
   margin-bottom: 25px;
 }
-/* line 1366, src/style.scss */
+/* line 1381, src/style.scss */
 .sponsors .sponsors-list-mod a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1369, src/style.scss */
+/* line 1384, src/style.scss */
 .sponsors .sponsors-list-mod a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2363,13 +2377,13 @@ footer {
   color: #bada55;
 }
 @media (min-width: 600px) {
-  /* line 1362, src/style.scss */
+  /* line 1377, src/style.scss */
   .sponsors .sponsors-list-mod {
     margin-bottom: 0px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1362, src/style.scss */
+  /* line 1377, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -2379,7 +2393,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 1362, src/style.scss */
+  /* line 1377, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -2388,13 +2402,13 @@ footer {
     columns: 3;
   }
 }
-/* line 1388, src/style.scss */
+/* line 1403, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 1394, src/style.scss */
+/* line 1409, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -2402,12 +2416,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 1401, src/style.scss */
+/* line 1416, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 1406, src/style.scss */
+/* line 1421, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -2418,13 +2432,13 @@ footer {
   position: relative;
 }
 @media (min-width: 700px) {
-  /* line 1406, src/style.scss */
+  /* line 1421, src/style.scss */
   .ftr-logo-bike {
     display: block;
   }
 }
 
-/* line 1420, src/style.scss */
+/* line 1435, src/style.scss */
 .mailing-list-mod {
   max-width: 540px;
   width: 100%;
@@ -2434,18 +2448,18 @@ footer {
   background-size: 150px, 100%;
 }
 @media (min-width: 700px) {
-  /* line 1420, src/style.scss */
+  /* line 1435, src/style.scss */
   .mailing-list-mod {
     max-height: 228px;
     height: 228px;
   }
 }
-/* line 1435, src/style.scss */
+/* line 1450, src/style.scss */
 .mailing-list-mod #mce-EMAIL, .mailing-list-mod #mc-embedded-subscribe {
   height: 32px;
   margin-bottom: 12px;
 }
-/* line 1440, src/style.scss */
+/* line 1455, src/style.scss */
 .mailing-list-mod #mce-EMAIL {
   border-color: #eee;
   -webkit-border-radius: 5px;
@@ -2458,14 +2472,14 @@ footer {
   border-bottom-color: #ddd;
   width: 229px;
 }
-/* line 1449, src/style.scss */
+/* line 1464, src/style.scss */
 .mailing-list-mod #mc-embedded-subscribe {
   width: 105px;
   letter-spacing: 1px;
   padding: 0px 2px 0px 2px;
 }
 
-/* line 1457, src/style.scss */
+/* line 1472, src/style.scss */
 .mailing-list-mod:before {
   height: 8px;
   content: '';
@@ -2479,7 +2493,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1470, src/style.scss */
+/* line 1485, src/style.scss */
 .mailing-list-mod:after {
   height: 8px;
   content: '';
@@ -2493,7 +2507,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1483, src/style.scss */
+/* line 1498, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -2504,7 +2518,7 @@ footer {
   text-align: center;
 }
 
-/* line 1498, src/style.scss */
+/* line 1513, src/style.scss */
 .fb-box-mod {
   margin-top: 30px;
 }
@@ -2512,12 +2526,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 1508, src/style.scss */
+/* line 1523, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 1512, src/style.scss */
+/* line 1527, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -2538,7 +2552,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1526, src/style.scss */
+/* line 1541, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -2549,12 +2563,12 @@ footer {
   left: auto;
 }
 
-/* line 1532, src/style.scss */
+/* line 1547, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 1536, src/style.scss */
+/* line 1551, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -2575,7 +2589,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1550, src/style.scss */
+/* line 1565, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
