--- a/views/page.twig
+++ b/views/page.twig
@@ -28,11 +28,13 @@
 	{% endif %}
 
 	<section class="raffle-history history-aside">
+		<div class="aside-rule"></div>
 		{% if post.sponsors %}
 			<h4 class="caption-section-h">Raffle Winners</h4>
 			{{post.winners}}	
 		{% endif %}
 
+		<div class="aside-rule"></div>
 		{% if post.sponsors %}
 			<h4 class="caption-section-h">Business Sponsors</h4>
 			{{post.sponsors}}
